# crl

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/actions/install-gperf/: action.yaml
.github/workflows/: main.yaml
docs/: benchmarks.md
example/: CMakeLists.txt  main.cpp
example/assets/logs/source/: t.txt
lib/cmake/: generate.cmake  resource_library.cmake
lib/crl/: CMakeLists.txt
lib/crl/cmake/: resource_library.cmake
lib/crl/include/: crl.h
lib/crl/include/crl/: crl.h  crlv.h
lib/crl/include/crl/utils/: string_literal.h  strv.h
lib/crl/src/: crl.cpp  crlv.cpp  utils_strv.cpp
lib/crl_hot_reload/: CMakeLists.txt  README.md
lib/crl_hot_reload/include/: crl_hot_reload.h
lib/crl_hot_reload/src/: crl_hot_reload.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/src/: bench.cpp  test_utils_strv.cpp
tools/: generate_testset.py  run_benchmark.py
